add delete method

--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,7 +1,8 @@
-<div>
-  <a href="/movies/<%= @the_movie.id %>" data-turbo="delete">
-    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-    <input type="hidden" name="_method" value="patch">
-    Delete movie
-  </a>
-</div>
+<a href="/movies/<%= @the_movie.id %>" data-turbo-method="delete"> 
+  Delete movie
+</a>
+
+<form action="/movies/<%= @the_movie.id %>" method="post" data-turbo="false">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <input type="hidden" name="_method" value="patch">
+</form>
