--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -4,6 +4,10 @@
   Add a new movie
 </h2>
 
+<% @the_movie.errors.full_messages.each do |msg| %>
+  <li><%= msg %></li>
+<% end %>
+
 <form action="/movies" method="post" data-turbo="false">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
@@ -12,7 +16,7 @@
       Title
     </label>
 
-    <input type="text" id="title_box" name="query_title">
+    <input type="text" id="title_box" name="query_title" value="<%= @the_movie.title %>">
   </div>
 
   <div>
@@ -20,7 +24,7 @@
       Description
     </label>
 
-    <textarea id="description_box" name="query_description" rows="3"></textarea>
+    <textarea id="description_box" name="query_description" rows="3"><%= @the_movie.description %></textarea>
   </div>
 
   <div>
