--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -12,11 +12,7 @@
       </div>
 
       <div>
-        <a href="/movies/<%= @the_movie.id %>" data-turbo="delete">
-          <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-          <input type="hidden" name="_method" value="patch">
-          Delete movie
-        </a>
+        <a href="/movies/<%= @the_movie.id %>" data-turbo-method="delete"> Delete movie</a>
       </div>
     </div>
 
